--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
   jpa:
     show-sql: true
     open-in-view: false
+iyzico:
+  api-key: sandbox-2lcnB40RFsVV2cgasdhRdabezlyJg8n5
+  secret-key: sandbox-Xg5yIfWYH8f7fiBXcZ0JrxLmOV5awr6O
+  base-url: https://sandbox-api.iyzipay.com/
