--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -9,3 +9,7 @@ spring:
     hibernate:
       ddl-auto: create-drop
       use-new-id-generator-mappings: false
+iyzico:
+  api-key: sandbox-2lcnB40RFsVV2cgasdhRdabezlyJg8n5
+  secret-key: sandbox-Xg5yIfWYH8f7fiBXcZ0JrxLmOV5awr6O
+  base-url: https://sandbox-api.iyzipay.com/
